<resources>
    <string name="app_name">Trash Network - Cleaning</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_illegal_id">Illegal ID</string>
    <string name="error_incorrect_id">Incorrect ID</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="response_data_corrupt">Received data has corrupted, please try again</string>
    <string name="network_error">Network unavailable or connection timeout</string>
    <string name="unknown_error">Unknown error</string>
    <string name="server_internal_error">Remote server internal error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="alert_waiting">Please wait…</string>
    <string name="alert_session_expired">Session has expired, please login again.</string>
    <string name="error">Error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_monitor">Monitor</string>
    <string name="action_work_group">Work Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="action_work_record">Work Record</string>
    <string name="action_exit">Exit</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="exit_query">Are you sure to exit?</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="other">Other</string>
    <string name="account">Account</string>
    <string name="action_logout">Logout</string>
    <string name="action_message">Message</string>
    <string name="action_contact">Contact</string>
    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="no_contact">No contact</string>

    <string name="no_message">No message</string>
    <string name="cleaner">Cleaner</string>
    <string name="cleaners">Cleaners</string>
    <string name="manager">Manager</string>
    <string name="managers">Managers</string>
    <string name="groups">Groups</string>

    <string name="your_location">Your location</string>
    <string name="unknown_location">Unknown location</string>
    <string name="last_cleaned">Last cleaned</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="no_feedback">No feedback</string>
    <string name="no_record">No record</string>
    <string name="trash_id_format">Trash Can #%d</string>
    <string name="action_send_message">Send message</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="action_view_more_records">View more records</string>
    <string name="alert_loading">Loading…</string>

    <string name="alert_posting_work_record">Posting new work record…</string>
    <string name="alert_location_outdate">Your location info has been outdated,
        please try again after your location is updated.</string>
    <string name="member">Member</string>
    <string name="group_member_foramt">%d members</string>

    <string name="bulletin">Bulletin</string>
    <string name="action_view_more_bulletin">View more bulletin…</string>
    <string name="action_post_bulletin">Post new bulletin</string>
    <string name="no_bulletin">No bulletin</string>
    <string name="new_bulletin">New bulletin</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="cleaning_reminder">Cleaning Reminder</string>
    <string name="cleaning_reminder_content_format">Trash can #%d needs to be cleaned.</string>
</resources>
