<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/nav_group_feature"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_monitor"
            android:checked="true"
            android:icon="@drawable/ic_monitor"
            android:title="@string/action_monitor" />

        <item android:id="@+id/nav_work_group"
            android:icon="@drawable/ic_friend"
            android:title="@string/action_work_group"/>

    </group>

    <group android:id="@+id/nav_group_other"
        android:checkableBehavior="none">
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"/>

        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/action_exit"/>
    </group>

</menu>