<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar android:id="@+id/login_progress"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_centerInParent="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/item_padding"
                    android:paddingBottom="@dimen/item_padding"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/nav_header_portrait_size"
                        android:layout_height="@dimen/nav_header_portrait_size"
                        android:id="@+id/login_portrait"
                        android:src="@mipmap/ic_launcher"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        app:civ_border_width="1dp"
                        app:civ_border_color="#eeeeee"
                        app:civ_fill_color="#eeeeee"
                        android:layout_gravity="center_horizontal" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding">

                        <ImageView
                            android:id="@+id/icon_phone_login"
                            android:layout_width="@dimen/normal_icon_size"
                            android:layout_height="@dimen/normal_icon_size"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:layout_centerVertical="true"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_phone"
                            />

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/edit_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:hint="@string/prompt_id"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:completionThreshold="1"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:layout_toRightOf="@+id/icon_phone_login"
                            app:met_textColorHint="@color/grey_500"
                            app:met_underlineColor="@color/grey_500"
                            app:met_primaryColor="@color/colorAccent"
                            app:met_floatingLabelText="@string/prompt_id"
                            app:met_floatingLabel="highlight"
                            app:met_clearButton="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/item_padding">

                        <ImageView
                            android:id="@+id/icon_password_login"
                            android:layout_width="@dimen/normal_icon_size"
                            android:layout_height="@dimen/normal_icon_size"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:layout_centerVertical="true"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_key" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:layout_centerVertical="true"
                            app:met_textColorHint="@color/grey_500"
                            app:met_underlineColor="@color/grey_500"
                            android:hint="@string/prompt_password"
                            app:met_primaryColor="@color/colorAccent"
                            app:met_floatingLabelText="@string/prompt_password"
                            app:met_floatingLabel="highlight"
                            app:met_clearButton="true"
                            android:maxLength="20"
                            android:layout_toEndOf="@+id/icon_password_login" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_sign_in"
                        android:textSize="@dimen/large_text_size"
                        android:textColor="@android:color/white"
                        android:paddingTop="@dimen/large_button_padding"
                        android:paddingBottom="@dimen/large_button_padding"
                        android:textStyle="bold" />

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</LinearLayout>
